[package]
name = "tcp_handshake"
version = "0.2.0"
edition = "2024"
authors = ["Sae-Hwan Park"]
description = "Handshake protocol TCP server/client implementations to showcase Rust's network programming"
repository = "https://github.com/SaehwanPark/rust-handshake"

[dependencies]
threadpool = "1.8.1"
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "client-sync"
path = "src/bin/client-sync.rs"

[[bin]]
name = "client-async"
path = "src/bin/client-async.rs"

[[bin]]
name = "server-sequential"
path = "src/bin/server-sequential.rs"

[[bin]]
name = "server-threaded"
path = "src/bin/server-threaded.rs"

[[bin]]
name = "server-threadpool"
path = "src/bin/server-threadpool.rs"

[[bin]]
name = "server-async"
path = "src/bin/server-async.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"   # optimize for size (or s for less aggressive)
panic = "abort"   # don't include unwinding code
